--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 					changeImage();
 					$('#displayImage').hide();
 					//animateShowImage();
+					hideImage();
 			   } else {
 				  hideImage();
 			   }
