--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			   } else if (timer % 5 == 0 ) {
 					//hideImage();
 					changeImage();
-					$('#displayImage').hide();
+					//$('#displayImage').hide();
 					//animateShowImage();
 					hideImage();
 			   } else {
