--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	  </div>
 	  <div class="form-group">
 		<label for="word12">Search Word</label>
-		<input type="text" class="form-control" id="word12" value="Crazy">
+		<input type="text" class="form-control" id="word12" value="Beautiful">
 	  </div>
 	  <div class="form-group">
 		<label for="word13">Search Word</label>
