--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 	  </div>
 	  <div class="form-group">
 		<label for="word2">Search Word</label>
-		<input type="text" class="form-control" id="word2" value="Happy">
+		<input type="text" class="form-control" id="word2" value="Eat">
 	  </div>
 	  <div class="form-group">
 		<label for="word3">Search Word</label>
@@ -176,7 +176,7 @@
 	  </div>
 	  <div class="form-group">
 		<label for="word11">Search Word</label>
-		<input type="text" class="form-control" id="word11" value="Dance">
+		<input type="text" class="form-control" id="word11" value="Food">
 	  </div>
 	  <div class="form-group">
 		<label for="word12">Search Word</label>
